[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vault_udp"
version = "0.0.2"
dynamic = ["version"]
dependencies = [
	"PyNaCl>=1.5.0",
	"PySignal>=1.1.1",
	"PyNewHope>=0.33",
	"psutil>=6.0.0"
]
authors = [
  { name="ecki", email="ecki@vaultcity.com" },
]
description = "wrapper for udp socket"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: udp socket wrapper",
]

[project.urls]
Homepage = "https://app.radicle.xyz/nodes/seed.radicle.garden/rad:z2wQB4BJzHugMFQ8y5Z7a9BYaSBKo"
Repository = "rad:z2wQB4BJzHugMFQ8y5Z7a9BYaSBKo"
